--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@ body{
 
 }
 
+#header{
+
+}
+
 nav{
+     background-color: bisque;
     width: 100%;
     height: 50px;
-    background-color: bisque;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    position: fixed;
+    position: fixed; 
+  
 }
 
 ul{
@@ -39,9 +43,41 @@ ul li{
 }
 
 .navButton:hover{
-    transition: 1seg;
+   
     background-color: aliceblue;
 
 }
 
+.sectionInicio,
+.sectionSobreNosotros,
+.sectionCompañias,
+.sectionContacto{
+    height:100vh;
+    width: 100%;
+ 
+}
 
+
+
+.sectionInicio{   
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    border-bottom: 1px solid;
+}
+
+
+.imgLogo,.fraseInicio{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fraseInicio{
+  
+}
+
+.sectionSobreNosotros{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
