--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 *{
     margin: 0;
+    padding: 0;
 }
 
 body{
-
+    
 }
 
 #header{
@@ -43,21 +44,16 @@ ul li{
 }
 
 .navButton:hover{
-   
     background-color: aliceblue;
-
 }
 
 .sectionInicio,
 .sectionSobreNosotros,
-.sectionCompañias,
+.sectionCompanias,
 .sectionContacto{
     height:100vh;
     width: 100%;
- 
 }
-
-
 
 .sectionInicio{   
     display: grid;
@@ -72,12 +68,109 @@ ul li{
   align-items: center;
 }
 
-.fraseInicio{
-  
+.imgContainer {
+    transform: skew(-5deg);
 }
 
-.sectionSobreNosotros{
+.logo{
+    width:600px ;
+}
+
+.imgLogo{
+    z-index: -1;
+    position: relative;
+    transform: skew(11.3deg);
+    transform-origin: bottom right;
+    background-color: rgb(239, 245, 245);
+}
+ 
+
+.sectionCompanias,
+.sectionContacto{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+
+.imgCompanias{
+    display: grid;
+    grid-template-columns: repeat(3,300px);
+    grid-template-rows: repeat(2,350px);
+    align-items: center;
+}
+
+.logoRivadavia,
+.logoBoston,
+.logoExperta,
+.logoLPS,
+.logoSMG,
+.logoMapfre{
+    justify-self:center;
+}
+
+/* IMAGENES DE LAS COMPAÑIAS */
+.logoRivadavia{
+    width: 150px;
+    height: 150px;
+}
+
+.logoBoston{
+    width:450px;
+    height: 250px;
+}
+
+.logoSMG{
+    width: 250px;
+    height: 200px;
+}
+
+.logoExperta{
+    width: 450px;
+    height: 250px;
+}
+
+.logoMapfre{
+    width: 300px;
+    height: 250px;
+}
+
+.logoLPS{
+    width: 250px;
+    height: 250px;
+}
+
+
+/* SECCION SOBRE NOSOTROS */
+.sectionSobreNosotros{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border-bottom: 1px solid;
+}
+
+.titleSobreNosotros{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size:30px;
+}
+
+.divTitleCompanias{
+
+}
+
+.fraseSobreNosotros{
+    margin-top: 15px;
+ width: 800px;
+ justify-self: center;
+}
+
+.sectionCompanias{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+
+    text-align: center;
+    border-bottom: 1px solid;
+}
+
