--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+
 
 body{
-    
+    margin: 0;
+    padding: 0;
+   
 }
 
-#header{
 
-}
 
 nav{
      background-color: bisque;
@@ -51,6 +48,7 @@ ul li{
 .sectionSobreNosotros,
 .sectionCompanias,
 .sectionContacto{
+    padding-top: 50px;
     height:100vh;
     width: 100%;
 }
@@ -69,7 +67,7 @@ ul li{
 }
 
 .imgContainer {
-    transform: skew(-5deg);
+    transform: skew(-11deg);
 }
 
 .logo{
@@ -95,8 +93,9 @@ ul li{
 
 .imgCompanias{
     display: grid;
-    grid-template-columns: repeat(3,300px);
-    grid-template-rows: repeat(2,350px);
+    grid-template-columns: repeat(3,250px);
+    grid-template-rows: repeat(2,200px);
+    gap: 50px;
     align-items: center;
 }
 
@@ -107,39 +106,34 @@ ul li{
 .logoSMG,
 .logoMapfre{
     justify-self:center;
+   
 }
 
 /* IMAGENES DE LAS COMPAÑIAS */
-.logoRivadavia{
-    width: 150px;
-    height: 150px;
+/*  .logoRivadavia{
+   
 }
 
 .logoBoston{
-    width:450px;
-    height: 250px;
+
 }
 
 .logoSMG{
-    width: 250px;
-    height: 200px;
+  
 }
 
 .logoExperta{
-    width: 450px;
-    height: 250px;
+  
 }
 
 .logoMapfre{
-    width: 300px;
-    height: 250px;
-}
+  
+} 
 
 .logoLPS{
-    width: 250px;
-    height: 250px;
+   
 }
-
+ */
 
 /* SECCION SOBRE NOSOTROS */
 .sectionSobreNosotros{
@@ -166,11 +160,5 @@ ul li{
  justify-self: center;
 }
 
-.sectionCompanias{
-    display: grid;
-    grid-template-rows: repeat(2,1fr);
 
-    text-align: center;
-    border-bottom: 1px solid;
-}
 
