--- a/style.css
+++ b/style.css
@@ -83,8 +83,7 @@ ul li{
 }
  
 
-.sectionCompanias,
-.sectionContacto{
+.sectionCompanias{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -162,4 +161,23 @@ ul li{
 }
 
 
+.sectionContacto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+.whatsapp,
+.email,
+.direccion{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 300px;
+    height: 300px;
+    border: 1px solid;
+    margin: 10px;
+    border-radius: 100px;
+}
