--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+:root {
+    --varHeightNav: 60px;
+    --varColorNav: #669bbc;
+}
+
 
 body{
     margin: 0;
@@ -10,20 +15,21 @@ body{
 
 
 nav{
-     background-color: bisque;
+    z-index: 1;
+     background-color: var(--varColorNav);
     width: 100%;
-    height: 50px;
+    height: var(--varHeightNav);
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed; 
-  
+    
 }
 
 ul{
     display: grid;
     grid-template-columns: repeat(4,200px);
-   gap: 10px;
+   gap: 60px;
 }
 
 ul li{
@@ -31,25 +37,39 @@ ul li{
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 
 .navButton{
-    background-color: bisque;
-    width: 150px;
-    height: 50px;
+    background-color: var(--varColorNav);
+    width: 200px;
+    height: var(--varHeightNav);
     border: none;
 }
 
 .navButton:hover{
-    background-color: aliceblue;
+    transition: background-color 0.5s;
+    background-color: #003049;
+    color: wheat;
+}
+
+
+
+.navImg{
+    width: 70px;
+    height: var(--varHeightNav);
+} 
+
+.navLink span{
+    font-size:15px ;
 }
 
 .sectionInicio,
 .sectionSobreNosotros,
 .sectionCompanias,
 .sectionContacto{
-    padding-top: 50px;
+    padding-top: var(--varHeightNav);
     height:100vh;
     width: 100%;
 }
@@ -80,7 +100,7 @@ ul li{
     position: relative;
     transform: skew(11.3deg);
     transform-origin: bottom right;
-    background-color: rgb(239, 245, 245);
+    background-color:#f9f7f3;
 }
  
 
@@ -92,7 +112,9 @@ ul li{
     border-bottom: 1px solid;
 }
 
-
+.divTitleCompanias{
+    margin-bottom: 50px;
+}
 
 .imgCompanias{
     display: grid;
