cambio el color del inicio y agrego un texto al msj de wpp

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --varHeightNav: 60px;
-    --varColorNav: #669bbc;
+    --varColorNav: #9cbed3;
     --varFont:  'Roboto', sans-serif;
 }
 
