--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 :root {
-    --varHeightNav: 60px;
+    --varHeightNav: 60px; 
     --varColorNav: #9cbed3;
     --varFont:  'Roboto', sans-serif;
 }
@@ -16,15 +16,17 @@ body{
 
 
 nav{
-    z-index: 1;
+     z-index: 1; 
      background-color: var(--varColorNav);
-    width: 100%;
+    width: 100vw;
+    position: fixed;
+    top: 0; 
     height: var(--varHeightNav);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: fixed; 
+    
 }
 
 ul{
@@ -69,7 +71,7 @@ ul li{
 .sectionSobreNosotros,
 .sectionCompanias,
 .sectionContacto{
-    padding-top: var(--varHeightNav);
+/*     padding-top: var(--varHeightNav); */
     height:100vh;
     width: 100%;
 }
