--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 :root {
-    --varHeightNav: 60px; 
+    --varHeightNav: 60px;
     --varColorNav: #9cbed3;
     --varFont: 'Roboto', sans-serif;
 }
@@ -15,16 +15,16 @@ body {
 
 
 
-nav{
+nav {
     z-index: 1;
-     background-color: var(--varColorNav);
-    width: 100%;
+    background-color: var(--varColorNav);
+    width: 100vw;
     height: var(--varHeightNav);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: fixed; 
+    position: fixed;
 }
 
 ul {
@@ -68,10 +68,10 @@ ul li {
 .sectionInicio,
 .sectionSobreNosotros,
 .sectionCompanias,
-.sectionContacto{
+.sectionContacto {
     padding-top: var(--varHeightNav);
-    height:100vh;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 
 .sectionInicio {
@@ -164,23 +164,17 @@ ul li {
 /*  .logoRivadavia{
    
 }
-
 .logoBoston{
-
 }
-
 .logoSMG{
   
 }
-
 .logoExperta{
   
 }
-
 .logoMapfre{
   
 } 
-
 .logoLPS{
    
 }
