--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
     --varHeightNav: 60px;
@@ -10,12 +10,14 @@
 body {
     margin: 0;
     padding: 0;
-  
+    background-color: #1e293b;
+    color: #f3f4f5;
+    font-family: var(--varFont);
 }
 
 
 
-nav {
+nav { position: fixed;
     z-index: 1;
     background-color: var(--varColorNav);
     width: 100vw;
@@ -24,7 +26,7 @@ nav {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    position: fixed;
+   
 }
 
 .ulNav {
@@ -78,7 +80,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-bottom: 1px solid;
-    background-color: #fff;
+    background-color: #1e293b;
 }
 
 
@@ -96,13 +98,13 @@ nav {
     font-family: var(--varFont);
 }
 
-.imgLogo:hover,
+/* .imgLogo:hover,
 .fraseInicio:hover {
     transition: 1s;
     background-color: var(--varColorNav);
-}
+} */
 
-.imgLogo:hover .imgContainer {
+.imgLogo .imgContainer {
     border-radius: 50%;
     background-color: #fff;
 }
@@ -163,7 +165,7 @@ nav {
 }
 
 .titleSobreNosotros {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: var(--varFont);
     font-size: 30px;
 }
 
@@ -182,6 +184,13 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+.contactUs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
