--- a/css/style.css
+++ b/css/style.css
@@ -68,21 +68,27 @@ nav { position: fixed;
 }
 
 .sectionInicio,
-.sectionSobreNosotros,
-.sectionCompanias,
-.sectionContacto {
+.sectionSobreNosotros{
     padding-top: var(--varHeightNav);
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .sectionInicio {
+  
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    border-bottom: 1px solid;
+   
     background-color: #1e293b;
+
 }
 
+.imgContainer{
+    /* background-image: url(../img/editconjunto.png); */
+    background-position: center;
+    background-size: 80%;
+    background-repeat: no-repeat;  
+} 
 
 
 .imgLogo,
@@ -90,12 +96,17 @@ nav { position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
+  
+    
 }
+
 
 .fraseInicio p {
     font-size: 30px;
     width: 600px;
     font-family: var(--varFont);
+
+    
 }
 
 /* .imgLogo:hover,
@@ -119,6 +130,8 @@ nav { position: fixed;
 
 .logo {
     width: 550px;
+    border-radius: 50%;
+    background-color: #fff;
 }
 
 /* .imgLogo {
@@ -156,12 +169,14 @@ nav { position: fixed;
 
 /* SECCION SOBRE NOSOTROS */
 .sectionSobreNosotros {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    justify-content: center;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
     align-items: center;
     text-align: center;
-    border-bottom: 1px solid;
+   
+
 }
 
 .titleSobreNosotros {
@@ -169,18 +184,40 @@ nav { position: fixed;
     font-size: 30px;
 }
 
+
+
 .fraseSobreNosotros {
     font-family: var(--varFont);
-    width: 800px;
-
+    width: 880px;
 }
 
 .fraseSobreNosotros span {
     font-weight: bolder;
 }
 
+.containerBeneficios{
+    /* height: 100%;
+    width: 880px; */
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+
+}
+
+.beneficios{ 
+    width: 250px;
+    height: 300px;
+    border: 1px solid;
+    border-radius: 25px
+}
 
 .sectionContacto {
+    height: 500px;
+    padding-top: var(--varHeightNav);
     display: flex;
     justify-content: center;
     align-items: center;
