--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     --varFont: 'Roboto', sans-serif;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+}
 
 body {
     margin: 0;
@@ -105,8 +109,6 @@ nav { position: fixed;
     font-size: 30px;
     width: 600px;
     font-family: var(--varFont);
-
-    
 }
 
 /* .imgLogo:hover,
@@ -222,7 +224,7 @@ nav { position: fixed;
 }
 
 .tituloBeneficios{
-    height: 100%;
+
     display: flex;
     justify-content: top;
 }
@@ -344,6 +346,7 @@ footer p{
 
     .sectionContacto{
 height: auto;
+margin-bottom: 50px;
     }
     
 
@@ -359,5 +362,43 @@ height: auto;
 }
 
 @media screen and (max-width: 1007px) {
-    
+  *{
+    margin: 0;
+    padding:0 ;
+  }
+    body{
+width: 100vw;
+    }
+    nav {
+        display: none;
+        width: auto;
+    }
+    .logo{
+        width: 350px;
+        height: 350;
+    }
+
+    .sectionSobreNosotros {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+
+        align-items: center;
+        text-align: center;       
+    }
+
+    .fraseSobreNosotros,
+    .fraseInicio p {
+        width: auto;
+      /*   font-size: 30px; */
+      text-align: center;
+    }
+
+    .containerBeneficios{
+    height: 100%;
+     display: flex;
+     flex-direction: column;
+    justify-content: center;
+    align-items: center;        
+    }
 }
