mejoro responsive para el nav

--- a/css/style.css
+++ b/css/style.css
@@ -369,9 +369,9 @@ margin-bottom: 50px;
     body{
 width: 100vw;
     }
-    nav {
+
+    .ulNav{
         display: none;
-        width: auto;
     }
     .logo{
         width: 350px;
