cambio el lugar del logo del nav, cambio las fuentes del inicio y las animaciones

--- a/css/sliders.css
+++ b/css/sliders.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
   --varHeightNav: 60px;
   --varColorNav: #9cbed3;
   --varFont: 'Roboto', sans-serif;
-}
+} */
 
 .sectionCompanias{
     height: 100%;
@@ -11,7 +11,7 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 50px;
-    gap: 50px;
+    row-gap: 50px;
  
     padding-top: var(--varHeightNav);
 }
