--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+/* IMPORTAMOS FUENTES DE GOOGLE */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap');
 
+/* DEFINIMOS VARIABLES */
 :root {
     --varHeightNav: 60px;
-    --varColorNav: #9cbed3;
+    --varColorNav: #01a6b7;
     --varFont: 'Roboto', sans-serif;
 }
 
@@ -12,34 +16,44 @@
 }
 
 body {
+  
     margin: 0;
     padding: 0;
-    background-color: #1e293b;
-    color: #f3f4f5;
+    background-color: #f6f6f6;
+    color: #000;
     font-family: var(--varFont);
 }
 
+header{
+    position: fixed;
+    z-index: 1000;
+    display: flex;
 
+}
 
-nav { position: fixed;
+nav { 
+    position: fixed;
     z-index: 1;
     background-color: var(--varColorNav);
-    width: 100vw;
+    width: 100%;
     height: var(--varHeightNav);
     display: flex;
-    flex-direction: row;
+    /* justify-content:space-between; */
     justify-content: center;
-    align-items: center;
-   
+    
+    border-bottom: 2px solid;
 }
+
 
 .ulNav {
     display: flex;
     flex-wrap: wrap;
-
+    column-gap: 30px;
+  
 }
 
 .ulNav li {
+    display: flex;
     list-style: none;
 
 }
@@ -47,15 +61,20 @@ nav { position: fixed;
 
 .navButton {
     background-color: var(--varColorNav);
-    width: 200px;
     height: var(--varHeightNav);
+    color: #fff;
+    width: auto;
+    padding-left: 25px;
+    padding-right: 25px;
     border: none;
+    
 }
 
 .navButton:hover {
     transition: background-color 0.5s;
     background-color: #003049;
     color: wheat;
+    
 }
 
 
@@ -63,11 +82,17 @@ nav { position: fixed;
 .navImg {
     width: 70px;
     height: var(--varHeightNav);
+    justify-self: start;
 }
 
+
+
+
 .navLink span {
-    font-size: 17px;
-    font-family: var(--varFont);
+    font-size: 20px;
+    font-family:'Caprasimo';
+    
+    /* font-family: var(--varFont); */
 
 }
 
@@ -79,21 +104,9 @@ nav { position: fixed;
 }
 
 .sectionInicio {
-  
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-   
-   /*  background-color: #1e293b; */
-
 }
-
-.imgContainer{
-    /* background-image: url(../img/editconjunto.png); */
-    background-position: center;
-    background-size: 80%;
-    background-repeat: no-repeat;  
-} 
-
 
 .imgLogo,
 .fraseInicio {
@@ -106,62 +119,27 @@ nav { position: fixed;
 
 
 .fraseInicio p {
-    font-size: 30px;
+    font-size: 65px;
     width: 600px;
-    font-family: var(--varFont);
+ /*    font-family: var(--varFont); */
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: 'Tangerine', cursive;
+    text-align: center;
+    font-weight:bolder;
+    
 }
-
-/* .imgLogo:hover,
-.fraseInicio:hover {
-    transition: 1s;
-    background-color: var(--varColorNav);
-} */
 
 .imgLogo .imgContainer {
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #f6f6f6;
 }
 
-.fraseInicio:hover p {
-    color: #fff;
-}
-
-/* .imgContainer {
-       transform: skew(-11deg);
-} */
 
 .logo {
     width: 550px;
     border-radius: 50%;
-    background-color: #fff;
+    background-color: #f6f6f6;
 }
-
-/* .imgLogo {
-
-    position: relative;
-      transform: skew(11.3deg); 
-       transform-origin: bottom right; 
-}
-
- */
-/* .sectionCompanias {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid;
-} */
-
-
-/* .imgCompanias {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-     grid-template-rows: repeat(2, 200px); 
-    gap: 70px;
-    
-    align-items: center;
-} */
-
 
 .divLogoImg{
     width: 250px;
@@ -214,13 +192,14 @@ nav { position: fixed;
     display: flex;
     width: 250px;
     height: 250px;
-    border: 1px solid;
+    border: 5px solid;
     border-radius: 25px;
     background-color: #fff;
     color: #000;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .tituloBeneficios{
