--- a/css/style.css
+++ b/css/style.css
@@ -1,350 +1,328 @@
 /* IMPORTAMOS FUENTES DE GOOGLE */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Caprasimo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Caprasimo&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap");
 
 /* DEFINIMOS VARIABLES */
 :root {
-    --varHeightNav: 60px;
-    --varColorNav: #5483B3;
-    --varFont: 'Roboto', sans-serif;
+  --varHeightNav: 60px;
+  --varColorNav: #5483b3;
+  --varFont: "Roboto", sans-serif;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    
-   
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
-    
-    margin: 0;
-    padding: 0;
-    background-color: #052659;
-    color: #C1E8FF;
-    font-family: var(--varFont);
+  margin: 0;
+  padding: 0;
+  background-color: #052659;
+  color: #fff;
+  font-family: var(--varFont);
 }
 
-header{
-    position: fixed;
-    z-index: 1000;
-    display: flex;
+header {
+  position: fixed;
+  z-index: 1000;
+  display: flex;
 }
 
-nav { 
-    position: fixed;
-    z-index: 1;
-    background-color: var(--varColorNav);
-    width: 100%;
-    height: var(--varHeightNav);
-    display: flex;
-    /* justify-content:space-between; */
-    justify-content: center;
-  
- /*    border-bottom: 2px solid; */
-}
+nav {
+  position: fixed;
+  z-index: 1;
+  background-color: var(--varColorNav);
+  width: 100%;
+  height: var(--varHeightNav);
+  display: flex;
+  /* justify-content:space-between; */
+  justify-content: center;
 
+  /*    border-bottom: 2px solid; */
+}
 
 .ulNav {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 30px;
-  
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 30px;
 }
 
 .ulNav li {
-    display: flex;
-    list-style: none;
-
+  display: flex;
+  list-style: none;
 }
 
-
 .navButton {
-    background-color: var(--varColorNav);
-    height: var(--varHeightNav);
-    color: #FFF;
-    width: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-    border: none;
-    
+  background-color: var(--varColorNav);
+  height: var(--varHeightNav);
+  color: #fff;
+  width: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  border: none;
 }
 
 .navButton:hover {
-    transition: background-color 0.5s;
-    background-color: #052659;
-    color: #FFF;
-    cursor: pointer;
+  transition: background-color 0.5s;
+  background-color: #052659;
+  color: #fff;
+  cursor: pointer;
 }
 
-
 .navLink span {
-    font-size: 20px;
-    font-family:'Caprasimo';
-    
-    /* font-family: var(--varFont); */
+  font-size: 20px;
+  font-family: "Caprasimo";
 
+  /* font-family: var(--varFont); */
 }
 
 .sectionInicio,
-.sectionSobreNosotros{
-    padding-top: var(--varHeightNav);
-    height: 100vh;
-    width: 100%;
+.sectionSobreNosotros {
+  padding-top: var(--varHeightNav);
+  height: 100vh;
+  width: 100%;
 }
 
 .sectionInicio {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    overflow-x: hidden;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  overflow-x: hidden;
 }
 
 .imgLogo,
 .fraseInicio {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-
 .fraseInicio p {
-    font-size: 65px;
-    width: 600px;
- /*    font-family: var(--varFont); */
-    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: 'Tangerine', cursive;
-    text-align: center;
-    font-weight:bolder;
-    
+  font-size: 65px;
+  width: 600px;
+  /*    font-family: var(--varFont); */
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
+  font-family: "Tangerine", cursive;
+  text-align: center;
+  font-weight: bolder;
 }
 
 .imgLogo .imgContainer {
-    border-radius: 50%;
-    background-color: #f6f6f6;
+  border-radius: 50%;
+  background-color: #f6f6f6;
 }
-
 
 .logo {
-    width: 550px;
-    border-radius: 50%;
-    background-color: #f6f6f6;
+  width: 550px;
+  border-radius: 50%;
+  background-color: #f6f6f6;
 }
 
-.divLogoImg{
-    width: 250px;
-    height: 250px;
+.divLogoImg {
+  width: 250px;
+  height: 250px;
 }
-
 
 /* SECCION SOBRE NOSOTROS */
 .sectionSobreNosotros {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: top;
-    align-items: center;
-    text-align: center;
-   
-
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
+  text-align: center;
 }
 
 .titleSobreNosotros {
-    font-family: var(--varFont);
-    font-size: 30px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  margin-bottom: 25px;
 }
 
-
-
 .fraseSobreNosotros {
-    font-family: var(--varFont);
-    width: 880px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 880px;
+  font-size: 18px;
 }
 
 .fraseSobreNosotros span {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
-.containerBeneficios{
-    /* height: 100%;
+.containerBeneficios {
+  /* height: 100%;
     width: 880px; */
-    margin-top: 50px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
 }
 
-.beneficios{ 
-    display: flex;
-    width: 250px;
-    height: 250px;
-    border: 5px solid;
-    border-radius: 25px;
-    background-color: #fff;
-    color: #000;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
+.beneficios {
+  display: flex;
+  width: 250px;
+  height: 250px;
+  border: 5px solid;
+  border-radius: 25px;
+  background-color: #fff;
+  color: #000;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: large;
+
+  font-weight: bold;
 }
 
-.tituloBeneficios{
-
-    display: flex;
-    justify-content: top;
+.tituloBeneficios {
+  display: flex;
+  justify-content: top;
 }
-
-
 
 .sectionContacto {
-    height: 500px;
-    padding-top: var(--varHeightNav);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  height: 700px;
+  padding-top: var(--varHeightNav);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+.titleContact{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    margin-bottom: 35px;
+}
+
 .contactUs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 
 .whatsapp,
 .email,
 .direccion {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 300px;
-    height: 300px;
-    border: 1px solid;
-    margin: 10px;
-    border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 300px;
+  height: 300px;
+  border: 1px solid;
+  margin: 10px;
+  border-radius: 100px;
 }
 
 .whatsapp:hover,
 .direccion:hover,
 .email:hover {
-    transition: all 0.5s;
-    padding: 10px;
+  transition: all 0.5s;
+  padding: 10px;
 }
 
 .whatsapp:hover {
-    background-color: rgb(32, 128, 32);
-    box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  background-color: rgb(32, 128, 32);
+  box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .email:hover {
-    background-color: #3546dd;
-    box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+  background-color: #3546dd;
+  box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .direccion:hover {
-    background-color: rgb(185, 31, 31);
-    box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(185, 31, 31);
+  box-shadow: 0 4px 15px 15px rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .whatsapp:not(:hover),
 .email:not(:hover),
 .direccion:not(:hover) {
-    transition: 0.5s;
+  transition: 0.5s;
 }
 
 .whatsapp a,
 .direccion a {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-
 .email span {
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-    font-family: var(--varFont);
-    color: rgb(238, 234, 230);
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  font-family: var(--varFont);
+  color: rgb(238, 234, 230);
 }
 
 .email:hover span {
-    opacity: 1;
-
+  opacity: 1;
 }
 
-footer{
-    border-top: 1px solid;
-    height: 30px
+footer {
+  border-top: 1px solid;
+  height: 30px;
 }
-footer p{
-    height: 100% ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-weight: bolder;
+footer p {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: bolder;
 }
-
 
 @media screen and (max-width: 1159px) {
-    nav {
-   
-        width: 100vw;
-    }
-    .navButton{
-        display: none;
-    }
-     .sectionInicio,
-    .sectionSobreNosotros,
-    .sectionCompanias,
-    .sectionContacto,
-    .contactUs {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
+  nav {
+    width: 100vw;
+  }
+  .navButton {
+    display: none;
+  }
+  .sectionInicio,
+  .sectionSobreNosotros,
+  .sectionCompanias,
+  .sectionContacto,
+  .contactUs {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .sectionContacto{
-height: auto;
-margin-bottom: 50px;
-    }
-    
+  .sectionContacto {
+    height: auto;
+    margin-bottom: 50px;
+  }
 
-    .whatsapp,
-    .email,
-    .direccion {
-        border-radius: 50px;
-        width: 200px;
-        height: 200px;
-    }
-
-   
+  .whatsapp,
+  .email,
+  .direccion {
+    border-radius: 50px;
+    width: 200px;
+    height: 200px;
+  }
 }
 
 @media screen and (max-width: 1007px) {
-  *{
+  * {
     margin: 0;
-    padding:0 ;
+    padding: 0;
   }
-    body{
-width: 100vw;
-    }
-    
-/*     .nav{
+  body {
+    width: 100vw;
+  }
+
+  /*     .nav{
         display: flex;
     }
     .navImg{
@@ -364,32 +342,32 @@ width: 100vw;
         
     } */
 
-    .logo{
-        width: 350px;
-        height: 350;
-    }
+  .logo {
+    width: 350px;
+    height: 350;
+  }
 
-    .sectionSobreNosotros {
-        height: auto;
-        display: flex;
-        flex-direction: column;
+  .sectionSobreNosotros {
+    height: auto;
+    display: flex;
+    flex-direction: column;
 
-        align-items: center;
-        text-align: center;       
-    }
+    align-items: center;
+    text-align: center;
+  }
 
-    .fraseSobreNosotros,
-    .fraseInicio p {
-        width: auto;
-      /*   font-size: 30px; */
-      text-align: center;
-    }
+  .fraseSobreNosotros,
+  .fraseInicio p {
+    width: auto;
+    /*   font-size: 30px; */
+    text-align: center;
+  }
 
-    .containerBeneficios{
+  .containerBeneficios {
     height: 100%;
-     display: flex;
-     flex-direction: column;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;        
-    }
+    align-items: center;
+  }
 }
